[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Intro/space.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Screen.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MenuBar.gd" type="Script" id=3]

[node name="MenuBar" type="Node2D"]
modulate = Color( 1, 1, 1, 0.776471 )
z_index = 100
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
margin_left = 816.0
margin_right = 1024.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control"]
margin_left = 21.888
margin_top = 13.2449
margin_right = 123.888
margin_bottom = 36.2449
text = "Esc to hide"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="space" type="Sprite" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.168627 )
position = Vector2( 103.966, 140.106 )
scale = Vector2( 0.0981288, 0.241987 )
texture = ExtResource( 1 )

[node name="Screen" parent="CanvasLayer/Control" instance=ExtResource( 2 )]
position = Vector2( 103.031, 67.7312 )
scale = Vector2( 0.557, 0.251 )

[node name="ReturnMenu" type="Button" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_left = 26.1225
margin_top = 36.4695
margin_right = 184.122
margin_bottom = 100.47
mouse_default_cursor_shape = 2
text = "Return to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Screen2" parent="CanvasLayer/Control" instance=ExtResource( 2 )]
position = Vector2( 103.031, 146.786 )
scale = Vector2( 0.557, 0.251 )

[node name="Quit" type="Button" parent="CanvasLayer/Control"]
modulate = Color( 1, 1, 1, 0.737255 )
margin_left = 26.1225
margin_top = 115.525
margin_right = 184.122
margin_bottom = 179.525
mouse_default_cursor_shape = 2
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="CanvasLayer/Control"]
margin_left = 23.5612
margin_top = 208.47
margin_right = 184.561
margin_bottom = 265.47
mouse_default_cursor_shape = 6
min_value = -40.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/HSlider"]
margin_left = 9.54092
margin_right = 100.541
margin_bottom = 14.0
text = "Music Volume"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Control/ReturnMenu" to="." method="_on_ReturnMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="CanvasLayer/Control/HSlider" to="." method="_on_HSlider_value_changed"]
